new certificates, jobs experince, and profile images changed

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                       <div class="col-sm-6 col-md-5">
                         <div class="about-img">
                           <img
-                            src="assets/img/steve.png"
+                            src="assets/img/steve_chew.jpg"
                             class="img-fluid rounded b-shadow-a"
                             alt=""
                           />
@@ -607,6 +607,135 @@
               </div>
             </button>
           </div>
+
+          <div class="rounded shadow-sm py-2 my-3 px-sm-5">
+            <button
+              class="w-100 border-0 d-sm-flex justify-content-between mx-auto bg-transparent align-items-center"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#collapse5"
+            >
+              <div class="d-sm-flex align-items-center">
+                <img
+                  src="assets/img/aws-logo.png"
+                  alt=""
+                  class="img-certificate align-self-start"
+                />
+                <div class="text-center text-sm-start ps-sm-3 align-self-start pt-3">
+                  <h5 class="mb-1 subtitle-a fs-5">edX Verified Certificate for AWS Cloud Practitioner Essentials</h5>
+                  <span class="mb-0 text-secondary fs-6"
+                    >Issued Feb 2025</span
+                  >
+                  <div class="collapse" id="collapse5">
+                    <div class="subtitle-a">
+                      Skills: Business, Management, Marketing, and Related
+                      Support Services
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="align-self-start pt-4">
+                <i class="bi bi-caret-down-fill"></i>
+              </div>
+            </button>
+          </div>
+
+          <div class="rounded shadow-sm py-2 my-3 px-sm-5">
+            <button
+              class="w-100 border-0 d-sm-flex justify-content-between mx-auto bg-transparent align-items-center"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#collapse6"
+            >
+              <div class="d-sm-flex align-items-center">
+                <img
+                  src="assets/img/stanford-logo.png"
+                  alt=""
+                  class="img-certificate align-self-start"
+                />
+                <div class="text-center text-sm-start ps-sm-3 align-self-start pt-3">
+                  <h5 class="mb-1 subtitle-a fs-5">Stanford University EDX Certificate for Computer Science 101</h5>
+                  <span class="mb-0 text-secondary fs-6"
+                    >Issued Jan 2025</span
+                  >
+                  <div class="collapse" id="collapse6">
+                    <div class="subtitle-a">
+                      Skills: Business, Management, Marketing, and Related
+                      Support Services
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="align-self-start pt-4">
+                <i class="bi bi-caret-down-fill"></i>
+              </div>
+            </button>
+          </div>
+
+          <div class="rounded shadow-sm py-2 my-3 px-sm-5">
+            <button
+              class="w-100 border-0 d-sm-flex justify-content-between mx-auto bg-transparent align-items-center"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#collapse7"
+            >
+              <div class="d-sm-flex align-items-center">
+                <img
+                  src="assets/img/lithan-logo.png"
+                  alt=""
+                  class="img-certificate align-self-start"
+                />
+                <div class="text-center text-sm-start ps-sm-3 align-self-start pt-3">
+                  <h5 class="mb-1 subtitle-a fs-5">Lithan Academy Advance Diploma Cloud Computing</h5>
+                  <span class="mb-0 text-secondary fs-6"
+                    ></span
+                  >
+                  <div class="collapse" id="collapse7">
+                    <div class="subtitle-a">
+                      Skills: Business, Management, Marketing, and Related
+                      Support Services
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="align-self-start pt-4">
+                <i class="bi bi-caret-down-fill"></i>
+              </div>
+            </button>
+          </div>
+
+          <div class="rounded shadow-sm py-2 my-3 px-sm-5">
+            <button
+              class="w-100 border-0 d-sm-flex justify-content-between mx-auto bg-transparent align-items-center"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#collapse8"
+            >
+              <div class="d-sm-flex align-items-center">
+                <img
+                  src="assets/img/marconi-logo.png"
+                  alt=""
+                  class="img-certificate align-self-start"
+                />
+                <div class="text-center text-sm-start ps-sm-3 align-self-start pt-3">
+                  <h5 class="mb-1 subtitle-a fs-5">Guglielmo Marconi University Masters in Computer Science</h5>
+                  <span class="mb-0 text-secondary fs-6"
+                    ></span
+                  >
+                  <div class="collapse" id="collapse8">
+                    <div class="subtitle-a">
+                      Skills: Business, Management, Marketing, and Related
+                      Support Services
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="align-self-start pt-4">
+                <i class="bi bi-caret-down-fill"></i>
+              </div>
+            </button>
+          </div>
+
         </div>
       </section>
 
@@ -625,19 +754,65 @@
               class="w-100 border-0 d-sm-flex justify-content-between mx-auto bg-transparent align-items-center"
               type="button"
               data-bs-toggle="collapse"
+              data-bs-target="#experince5"
+            >
+              <div class="d-sm-flex align-items-center">
+                <img
+                  src="assets/img/mastercard-logo.png"
+                  alt=""
+                  class="img-certificate align-self-start"
+                />
+                <div class="text-center text-sm-start ps-sm-3 align-self-start pt-3">
+                  <h5 class="mb-1 subtitle-a fs-5">Infrastructure Engineer (APAC)</h5>
+                  <div class="subtitle-a">Mastercard</div>
+                  <span class="mb-0 text-secondary fs-6"
+                    >July 2024 - Present</span
+                  >
+                  <div class="collapse" id="experince5">
+                    <div class="subtitle-a">
+                      <ul>
+                        <li>Engage with customers at all stages of their Dynamic Yield journey, from initial contact to resolution.</li>
+                        <li>Collaborate closely with the Product and Development teams to resolve customer issues efficiently and effectively.</li>
+                        <li>Leverage our technical skills to address complex challenges and deliver optimal solutions to clients</li>
+                        <li>To function as part of End-User BIOS Infra Fulfilling team in providing technical support for the project coordination, implementation and rollout work of all End-User BIOS projects</li>
+                        <li>Support the APAC region, play a pivotal role in establishing our support presence in Singapore.</li>
+                        <li>Collaborate with our global support team to deliver consistent and exceptional service to our customers across the region.</li>
+                        <li>Define systems requirements for new technology implementations</li>
+                        <li>Balance independence with teamwork, contributing to both individual and collective success.</li>
+                        <li>Provide L2/L3 Infrastructure support and resolution to users around APAC</li>
+                        <li>Technical investigations and solution-oriented thinking in reaching resolutions and effectively communicating complex solutions to clients, ensuring their satisfaction and confidence in our products.</li>
+                        <li>Anticipate internal and/or external business challenges and/or regulatory issues</li>
+                        <li>Recommend process, product or service improvements, resource optimization and cost savings</li>
+                        <li>Recommend new technologies, methodologies, systems or opportunities for cost savings, security and service quality improvement</li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="align-self-start pt-4">
+                <i class="bi bi-caret-down-fill"></i>
+              </div>
+            </button>
+          </div>
+
+          <div class="rounded shadow-sm py-2 my-3 px-sm-5">
+            <button
+              class="w-100 border-0 d-sm-flex justify-content-between mx-auto bg-transparent align-items-center"
+              type="button"
+              data-bs-toggle="collapse"
               data-bs-target="#experince1"
             >
               <div class="d-sm-flex align-items-center">
-                <!-- <img
-                  src="assets/img/MU logo.png"
+                <img
+                  src="assets/img/trakomatic-logo.png"
                   alt=""
                   class="img-certificate align-self-start"
-                /> -->
+                />
                 <div class="text-center text-sm-start ps-sm-3 align-self-start pt-3">
                   <h5 class="mb-1 subtitle-a fs-5">IT Team Lead</h5>
                   <div class="subtitle-a">Trakomatic PTE LTD</div>
                   <span class="mb-0 text-secondary fs-6"
-                    >March 2024 - Current</span
+                    >March 2024 - July 2025</span
                   >
                   <div class="collapse" id="experince1">
                     <div class="subtitle-a">
@@ -679,11 +854,11 @@
               data-bs-target="#experince2"
             >
               <div class="d-sm-flex align-items-center">
-                <!-- <img
-                  src="assets/img/MU logo.png"
+                <img
+                  src="assets/img/trakomatic-logo.png"
                   alt=""
                   class="img-certificate align-self-start"
-                /> -->
+                />
                 <div class="text-center text-sm-start ps-sm-3 align-self-start pt-3">
                   <h5 class="mb-1 subtitle-a fs-5">Senior IT Support Engineer</h5>
                   <div class="subtitle-a">Trakomatic PTE LTD</div>
@@ -721,11 +896,11 @@
               data-bs-target="#collapse3"
             >
               <div class="d-sm-flex align-items-center">
-                <!-- <img
-                  src="assets/img/PSB logo.png"
+                <img
+                  src="assets/img/ibm-logo.png"
                   alt=""
                   class="img-certificate align-self-start"
-                /> -->
+                />
                 <div class="text-center text-sm-start ps-sm-3 align-self-start pt-3">
                   <h5 class="mb-1 subtitle-a fs-5">IT Deskside Support Engineer</h5>
                   <div class="subtitle-a">
@@ -772,11 +947,11 @@
               data-bs-target="#collapse4"
             >
               <div class="d-sm-flex align-items-center">
-                <!-- <img
-                  src="assets/img/PSB logo.png"
+                <img
+                  src="assets/img/db-schenker-logo.png"
                   alt=""
                   class="img-certificate align-self-start"
-                /> -->
+                />
                 <div class="text-center text-sm-start ps-sm-3 align-self-start pt-3">
                   <h5 class="mb-1 subtitle-a fs-5">Logistic Officer</h5>
                   <div class="subtitle-a">
