cerficates order revised

--- a/index.html
+++ b/index.html
@@ -475,7 +475,137 @@
               class="w-100 border-0 d-sm-flex justify-content-between mx-auto bg-transparent align-items-center"
               type="button"
               data-bs-toggle="collapse"
-              data-bs-target="#collapse1"
+              data-bs-target="#certificate"
+            >
+              <div class="d-sm-flex align-items-center">
+                <img
+                  src="assets/img/marconi-logo.png"
+                  alt=""
+                  class="img-certificate align-self-start"
+                />
+                <div class="text-center text-sm-start ps-sm-3 align-self-start pt-3">
+                  <h5 class="mb-1 subtitle-a fs-5">Guglielmo Marconi University Masters in Computer Science</h5>
+                  <span class="mb-0 text-secondary fs-6"
+                    ></span
+                  >
+                  <div class="collapse" id="certificate1">
+                    <div class="subtitle-a">
+                      Skills: Business, Management, Marketing, and Related
+                      Support Services
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="align-self-start pt-4">
+                <i class="bi bi-caret-down-fill"></i>
+              </div>
+            </button>
+          </div>
+
+          <div class="rounded shadow-sm py-2 my-3 px-sm-5">
+            <button
+              class="w-100 border-0 d-sm-flex justify-content-between mx-auto bg-transparent align-items-center"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#certificate2"
+            >
+              <div class="d-sm-flex align-items-center">
+                <img
+                  src="assets/img/lithan-logo.png"
+                  alt=""
+                  class="img-certificate align-self-start"
+                />
+                <div class="text-center text-sm-start ps-sm-3 align-self-start pt-3">
+                  <h5 class="mb-1 subtitle-a fs-5">Lithan Academy Advance Diploma Cloud Computing</h5>
+                  <span class="mb-0 text-secondary fs-6"
+                    ></span
+                  >
+                  <div class="collapse" id="certificate2">
+                    <div class="subtitle-a">
+                      Skills: Business, Management, Marketing, and Related
+                      Support Services
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="align-self-start pt-4">
+                <i class="bi bi-caret-down-fill"></i>
+              </div>
+            </button>
+          </div>
+
+          <div class="rounded shadow-sm py-2 my-3 px-sm-5">
+            <button
+              class="w-100 border-0 d-sm-flex justify-content-between mx-auto bg-transparent align-items-center"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#certificate3"
+            >
+              <div class="d-sm-flex align-items-center">
+                <img
+                  src="assets/img/aws-logo.png"
+                  alt=""
+                  class="img-certificate align-self-start"
+                />
+                <div class="text-center text-sm-start ps-sm-3 align-self-start pt-3">
+                  <h5 class="mb-1 subtitle-a fs-5">edX Verified Certificate for AWS Cloud Practitioner Essentials</h5>
+                  <span class="mb-0 text-secondary fs-6"
+                    >Issued Feb 2025</span
+                  >
+                  <div class="collapse" id="certificate3">
+                    <div class="subtitle-a">
+                      Skills: Business, Management, Marketing, and Related
+                      Support Services
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="align-self-start pt-4">
+                <i class="bi bi-caret-down-fill"></i>
+              </div>
+            </button>
+          </div>
+
+          <div class="rounded shadow-sm py-2 my-3 px-sm-5">
+            <button
+              class="w-100 border-0 d-sm-flex justify-content-between mx-auto bg-transparent align-items-center"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#certificate4"
+            >
+              <div class="d-sm-flex align-items-center">
+                <img
+                  src="assets/img/stanford-logo.png"
+                  alt=""
+                  class="img-certificate align-self-start"
+                />
+                <div class="text-center text-sm-start ps-sm-3 align-self-start pt-3">
+                  <h5 class="mb-1 subtitle-a fs-5">Stanford University EDX Certificate for Computer Science 101</h5>
+                  <span class="mb-0 text-secondary fs-6"
+                    >Issued Jan 2025</span
+                  >
+                  <div class="collapse" id="certificate4">
+                    <div class="subtitle-a">
+                      Skills: Business, Management, Marketing, and Related
+                      Support Services
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="align-self-start pt-4">
+                <i class="bi bi-caret-down-fill"></i>
+              </div>
+            </button>
+          </div>
+
+
+
+          <div class="rounded shadow-sm py-2 my-3 px-sm-5">
+            <button
+              class="w-100 border-0 d-sm-flex justify-content-between mx-auto bg-transparent align-items-center"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#certificate5"
             >
               <div class="d-sm-flex align-items-center">
                 <img
@@ -491,7 +621,7 @@
                   <span class="mb-0 text-secondary fs-6"
                     >May 2022 - Dec 2024</span
                   >
-                  <div class="collapse" id="collapse1">
+                  <div class="collapse" id="certificate5">
                     <div class="subtitle-a">
                       Skills: IT Service Management · Penetration Testing ·
                       Cybersecurity · C++ · Python (Programming Language) · Java
@@ -512,7 +642,7 @@
               class="w-100 border-0 d-sm-flex justify-content-between mx-auto bg-transparent align-items-center"
               type="button"
               data-bs-toggle="collapse"
-              data-bs-target="#collapse2"
+              data-bs-target="#certificate6"
             >
               <div class="d-sm-flex align-items-center">
                 <img
@@ -528,7 +658,7 @@
                   <span class="mb-0 text-secondary fs-6"
                     >May 2022 - Dec 2024</span
                   >
-                  <div class="collapse" id="collapse2">
+                  <div class="collapse" id="certificate6">
                     <div class="subtitle-a">
                       Skills: Python (Programming Language) · Digital Strategy ·
                       Information Technology
@@ -547,7 +677,7 @@
               class="w-100 border-0 d-sm-flex justify-content-between mx-auto bg-transparent align-items-center"
               type="button"
               data-bs-toggle="collapse"
-              data-bs-target="#collapse3"
+              data-bs-target="#certificate7"
             >
               <div class="d-sm-flex align-items-center">
                 <img
@@ -563,7 +693,7 @@
                   <span class="mb-0 text-secondary fs-6"
                     >Jun 2020 - Dec 2020</span
                   >
-                  <div class="collapse" id="collapse3">
+                  <div class="collapse" id="certificate7">
                     <div class="subtitle-a">
                       Skills: IT Management · Information Security
                     </div>
@@ -581,7 +711,7 @@
               class="w-100 border-0 d-sm-flex justify-content-between mx-auto bg-transparent align-items-center"
               type="button"
               data-bs-toggle="collapse"
-              data-bs-target="#collapse4"
+              data-bs-target="#certificate8"
             >
               <div class="d-sm-flex align-items-center">
                 <img
@@ -594,135 +724,7 @@
                   <span class="mb-0 text-secondary fs-6"
                     >April 2015 - Jun 2017</span
                   >
-                  <div class="collapse" id="collapse4">
-                    <div class="subtitle-a">
-                      Skills: Business, Management, Marketing, and Related
-                      Support Services
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="align-self-start pt-4">
-                <i class="bi bi-caret-down-fill"></i>
-              </div>
-            </button>
-          </div>
-
-          <div class="rounded shadow-sm py-2 my-3 px-sm-5">
-            <button
-              class="w-100 border-0 d-sm-flex justify-content-between mx-auto bg-transparent align-items-center"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#collapse5"
-            >
-              <div class="d-sm-flex align-items-center">
-                <img
-                  src="assets/img/aws-logo.png"
-                  alt=""
-                  class="img-certificate align-self-start"
-                />
-                <div class="text-center text-sm-start ps-sm-3 align-self-start pt-3">
-                  <h5 class="mb-1 subtitle-a fs-5">edX Verified Certificate for AWS Cloud Practitioner Essentials</h5>
-                  <span class="mb-0 text-secondary fs-6"
-                    >Issued Feb 2025</span
-                  >
-                  <div class="collapse" id="collapse5">
-                    <div class="subtitle-a">
-                      Skills: Business, Management, Marketing, and Related
-                      Support Services
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="align-self-start pt-4">
-                <i class="bi bi-caret-down-fill"></i>
-              </div>
-            </button>
-          </div>
-
-          <div class="rounded shadow-sm py-2 my-3 px-sm-5">
-            <button
-              class="w-100 border-0 d-sm-flex justify-content-between mx-auto bg-transparent align-items-center"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#collapse6"
-            >
-              <div class="d-sm-flex align-items-center">
-                <img
-                  src="assets/img/stanford-logo.png"
-                  alt=""
-                  class="img-certificate align-self-start"
-                />
-                <div class="text-center text-sm-start ps-sm-3 align-self-start pt-3">
-                  <h5 class="mb-1 subtitle-a fs-5">Stanford University EDX Certificate for Computer Science 101</h5>
-                  <span class="mb-0 text-secondary fs-6"
-                    >Issued Jan 2025</span
-                  >
-                  <div class="collapse" id="collapse6">
-                    <div class="subtitle-a">
-                      Skills: Business, Management, Marketing, and Related
-                      Support Services
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="align-self-start pt-4">
-                <i class="bi bi-caret-down-fill"></i>
-              </div>
-            </button>
-          </div>
-
-          <div class="rounded shadow-sm py-2 my-3 px-sm-5">
-            <button
-              class="w-100 border-0 d-sm-flex justify-content-between mx-auto bg-transparent align-items-center"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#collapse7"
-            >
-              <div class="d-sm-flex align-items-center">
-                <img
-                  src="assets/img/lithan-logo.png"
-                  alt=""
-                  class="img-certificate align-self-start"
-                />
-                <div class="text-center text-sm-start ps-sm-3 align-self-start pt-3">
-                  <h5 class="mb-1 subtitle-a fs-5">Lithan Academy Advance Diploma Cloud Computing</h5>
-                  <span class="mb-0 text-secondary fs-6"
-                    ></span
-                  >
-                  <div class="collapse" id="collapse7">
-                    <div class="subtitle-a">
-                      Skills: Business, Management, Marketing, and Related
-                      Support Services
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="align-self-start pt-4">
-                <i class="bi bi-caret-down-fill"></i>
-              </div>
-            </button>
-          </div>
-
-          <div class="rounded shadow-sm py-2 my-3 px-sm-5">
-            <button
-              class="w-100 border-0 d-sm-flex justify-content-between mx-auto bg-transparent align-items-center"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#collapse8"
-            >
-              <div class="d-sm-flex align-items-center">
-                <img
-                  src="assets/img/marconi-logo.png"
-                  alt=""
-                  class="img-certificate align-self-start"
-                />
-                <div class="text-center text-sm-start ps-sm-3 align-self-start pt-3">
-                  <h5 class="mb-1 subtitle-a fs-5">Guglielmo Marconi University Masters in Computer Science</h5>
-                  <span class="mb-0 text-secondary fs-6"
-                    ></span
-                  >
-                  <div class="collapse" id="collapse8">
+                  <div class="collapse" id="certificate8">
                     <div class="subtitle-a">
                       Skills: Business, Management, Marketing, and Related
                       Support Services
