--- a/index.html
+++ b/index.html
@@ -484,7 +484,8 @@
                   class="img-certificate align-self-start"
                 />
                 <div class="text-center text-sm-start ps-sm-3 align-self-start pt-3">
-                  <h5 class="mb-1 subtitle-a fs-5">Guglielmo Marconi University Masters in Computer Science</h5>
+                  <h5 class="mb-1 subtitle-a fs-5">Guglielmo Marconi University 
+                    (Msc) Masters of Computing - Computer Science</h5>
                   <span class="mb-0 text-secondary fs-6"
                     ></span
                   >
@@ -516,7 +517,7 @@
                   class="img-certificate align-self-start"
                 />
                 <div class="text-center text-sm-start ps-sm-3 align-self-start pt-3">
-                  <h5 class="mb-1 subtitle-a fs-5">Lithan Academy Advance Diploma Cloud Computing</h5>
+                  <h5 class="mb-1 subtitle-a fs-5">Lithan Academy Professional Diploma Cloud Computing</h5>
                   <span class="mb-0 text-secondary fs-6"
                     ></span
                   >
