--- a/index.html
+++ b/index.html
@@ -484,8 +484,7 @@
                   class="img-certificate align-self-start"
                 />
                 <div class="text-center text-sm-start ps-sm-3 align-self-start pt-3">
-                  <h5 class="mb-1 subtitle-a fs-5">Guglielmo Marconi University 
-                    (Msc) Masters of Computing - Computer Science</h5>
+                  <h5 class="mb-1 subtitle-a fs-5">Guglielmo Marconi University (Msc) Masters of Science in Computer Science</h5>
                   <span class="mb-0 text-secondary fs-6"
                     ></span
                   >
@@ -517,7 +516,7 @@
                   class="img-certificate align-self-start"
                 />
                 <div class="text-center text-sm-start ps-sm-3 align-self-start pt-3">
-                  <h5 class="mb-1 subtitle-a fs-5">Lithan Academy Professional Diploma Cloud Computing</h5>
+                  <h5 class="mb-1 subtitle-a fs-5">Lithan Academy Professional Diploma Cloud Administration</h5>
                   <span class="mb-0 text-secondary fs-6"
                     ></span
                   >
@@ -616,8 +615,7 @@
                 />
                 <div class="text-center text-sm-start ps-sm-3 align-self-start pt-3">
                   <h5 class="mb-1 subtitle-a fs-5">
-                    Certificates from Murdoch University Bachelor of Information
-                    Technology
+                  Murdoch University Bachelor of Information Technology in Cyber Security and Forensics
                   </h5>
                   <span class="mb-0 text-secondary fs-6"
                     >May 2022 - Dec 2024</span
