--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@
                 />
                 <div class="text-center text-sm-start ps-sm-3 align-self-start pt-3">
                   <h5 class="mb-1 subtitle-a fs-5">
-                  Murdoch University Bachelor of Information Technology in Cyber Security and Forensics
+                  Murdoch University (BIT) Bachelor of Information Technology in Cyber Security and Forensics
                   </h5>
                   <span class="mb-0 text-secondary fs-6"
                     >May 2022 - Dec 2024</span
@@ -652,7 +652,7 @@
                 <div class="text-center text-sm-start ps-sm-3 align-self-start pt-3">
                   <h5 class="mb-1 subtitle-a fs-5">PSB Academy</h5>
                   <div class="subtitle-a">
-                    Diploma of Education, Information Technology
+                    Diploma in InfoComm Technology
                   </div>
                   <span class="mb-0 text-secondary fs-6"
                     >May 2022 - Dec 2024</span
@@ -687,7 +687,7 @@
                 <div class="text-center text-sm-start ps-sm-3 align-self-start pt-3">
                   <h5 class="mb-1 subtitle-a fs-5">PSB Academy</h5>
                   <div class="subtitle-a">
-                    Certificate, Information Technology
+                    Certificate in InfoComm Technology
                   </div>
                   <span class="mb-0 text-secondary fs-6"
                     >Jun 2020 - Dec 2020</span
