--- a/index.html
+++ b/index.html
@@ -719,7 +719,7 @@
                   class="img-certificate align-self-start"
                 />
                 <div class="text-center text-sm-start ps-sm-3 align-self-start pt-3">
-                  <h5 class="mb-1 subtitle-a fs-5">Nanyang Polytechnic</h5>
+                  <h5 class="mb-1 subtitle-a fs-5">Nanyang Polytechnic - Diploma in Business Management</h5>
                   <span class="mb-0 text-secondary fs-6"
                     >April 2015 - Jun 2017</span
                   >
